# microservices-demo

./: .gitignore  .gitmodules  .travis-cron.rb  .travis.yml  Makefile  README.md  build.sh  buildDocker.sh  buildspec.yml  catalog-info.yaml  circle.yml  commands.txt  docker-compose.yml  experimenting.ipynb  go.mod  healthcheck.sh  http_api.txt  microservices-demo_id_rsa.enc  package-lock.json  pipfile  pom.xml  push.sh  reload.sh  requirements.txt  shippable.jobs.yml  shippable.resources.yml  shippable.triggers.yml  sys_usage-1.csv  tasks.txt  workaroundStuckContainers.sh
.applatix/: cart-db-dep.yaml  carts-dep.yaml  catalogue-db-dep.yaml  catalogue-dep.yaml  front-end-dep.yaml  orders-db-dep.yaml  orders-dep.yaml  payment-dep.yaml  queue-master-dep.yaml  rabbitmq-dep.yaml  session-db-dep.yaml  shipping-dep.yaml  sock-shop-workflow.yaml  user-db-dep.yaml  user-dep.yaml  zipkin-cron-dep.yaml  zipkin-dep.yaml  zipkin-mysql-dep.yaml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.terraform/: backend.tf  providers.tf  vpc.tf
accounts/: Dockerfile  pom.xml
analysis/: rulesets.txt
archive/: locustfile-1.py
cart/: Dockerfile  pom.xml
catalogue/: Dockerfile  (+7 more)
causal-discovery/: dimension-reduction.ipynb  pc-algorithm.ipynb  prepocess.ipynb  pyproject.toml  sieve.ipynb  sieve.py  tsifter.ipynb  tsifter.py
causal-discovery/citest/: fisher_z.py
causal-discovery/clustering/: kshape.py  metricsnamecluster.py  sbd.py
causal-discovery/experiments/: run_dimension_reduction.py  run_multicore_scaling.py
causal-discovery/util/: util.py
(+1166 files in other folders)
