[tool.poetry]
name = "causal-discovery"
version = "0.1.0"
description = ""
authors = ["tsurubee"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
jupyterlab = "^2.2.0"
matplotlib = "^3.3.0"
pgmpy = "^0.1.11"
pcalg = "^0.1.9"
scipy = "^1.5.2"
fastdtw = "^0.3.4"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
